text of pages+links

--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <h1>🕹Contact</h1>
+    <p>
+      Email us
+      <a href="mailto:oksanakostiuk89@gmail.com">oksanakostiuk89@gmail.com</a>
+      for more info
+    </p>
+    <div>
+      <a href="/">Homepage</a><a href="/photo.html">Photo</a
+      ><a href="/contact.html">Contact</a>
+    </div>
   </body>
 </html>
