--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>🇺🇦Oksana Kostiuk</title>
   </head>
   <body>
-    <h1>Hi</h1>
+    <h1>🥐Croissant</h1>
+    <div>
+      <a href="/">Homepage</a><a href="/photo.html">Photo</a
+      ><a href="/contact.html">Contact</a>
+    </div>
+    <p>
+      A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[1] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French:
+      [kʁwasɑ̃] (listen)) is a buttery, flaky, French viennoiserie pastry
+      inspired by the shape of the Austrian kipferl but using the French
+      yeast-leavened laminated dough.[2] Croissants are named for their
+      historical crescent shape, the dough is layered with butter, rolled and
+      folded several times in succession, then rolled into a thin sheet, in a
+      technique called laminating. The process results in a layered, flaky
+      texture, similar to a puff pastry. Crescent-shaped breads have been made
+      since the Renaissance, and crescent-shaped cakes possibly since
+      antiquity[3] but using brioche dough. Kipferls have long been a staple of
+      Austrian, and French bakeries and pâtisseries. The modern croissant was
+      developed in the early 20th century when French bakers replaced the
+      brioche dough of the kipferl with a yeast-leavened laminated dough.[4] In
+      the late 1970s, the development of factory-made, frozen, preformed but
+      unbaked dough made them into a fast food that could be freshly baked by
+      unskilled labor. The croissant bakery, notably the La Croissanterie chain,
+      was a French response to American-style fast food,[5] and as of 2008,
+      30–40% of the croissants sold in French bakeries and patisseries were
+      baked from frozen dough.[6] Croissants are a common part of a continental
+      breakfast in many European countries.
+      <a href="https://en.wikipedia.org/wiki/Croissant">Read on Wikipedia</a>
+    </p>
   </body>
 </html>
