--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>🕹Contact</h1>
     <p>
       Email us
-      <a href="mailto:oksanakostiuk89@gmail.com">oksanakostiuk89@gmail.com</a>
+      <a class="link-contact" href="mailto:oksanakostiuk89@gmail.com"
+        >oksanakostiuk89@gmail.com</a
+      >
       for more info
     </p>
-    <div>
+    <div class="main-link">
       <a href="/">Homepage</a><a href="/photo.html">Photo</a
       ><a href="/contact.html">Contact</a>
     </div>
