--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🇺🇦Oksana Kostiuk</title>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>🥐Croissant</h1>
-    <div>
+    <div class="main-link">
       <a href="/">Homepage</a><a href="/photo.html">Photo</a
       ><a href="/contact.html">Contact</a>
     </div>
-    <p>
+    <p class="text">
       A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[1] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French:
       [kʁwasɑ̃] (listen)) is a buttery, flaky, French viennoiserie pastry
       inspired by the shape of the Austrian kipferl but using the French
@@ -28,12 +29,20 @@
       brioche dough of the kipferl with a yeast-leavened laminated dough.[4] In
       the late 1970s, the development of factory-made, frozen, preformed but
       unbaked dough made them into a fast food that could be freshly baked by
-      unskilled labor. The croissant bakery, notably the La Croissanterie chain,
-      was a French response to American-style fast food,[5] and as of 2008,
-      30–40% of the croissants sold in French bakeries and patisseries were
-      baked from frozen dough.[6] Croissants are a common part of a continental
-      breakfast in many European countries.
-      <a href="https://en.wikipedia.org/wiki/Croissant">Read on Wikipedia</a>
+      unskilled labor.
     </p>
+
+    <p class="text-2">
+      The croissant bakery, notably the La Croissanterie chain, was a French
+      response to American-style fast food,[5] and as of 2008, 30–40% of the
+      croissants sold in French bakeries and patisseries were baked from frozen
+      dough.[6] Croissants are a common part of a continental breakfast in many
+      European countries.
+    </p>
+    <br />
+
+    <a class="link" href="https://en.wikipedia.org/wiki/Croissant"
+      >Read on Wikipedia</a
+    >
   </body>
 </html>
