--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🇺🇦Oksana Kostiuk</title>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h1>🥐Croissant</h1>
@@ -13,7 +13,7 @@
       <a href="/">Homepage</a><a href="/photo.html">Photo</a
       ><a href="/contact.html">Contact</a>
     </div>
-    <p class="text">
+    <p class="text-1">
       A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[1] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French:
       [kʁwasɑ̃] (listen)) is a buttery, flaky, French viennoiserie pastry
       inspired by the shape of the Austrian kipferl but using the French
@@ -32,7 +32,7 @@
       unskilled labor.
     </p>
 
-    <p class="text-2">
+    <p class="text-1">
       The croissant bakery, notably the La Croissanterie chain, was a French
       response to American-style fast food,[5] and as of 2008, 30–40% of the
       croissants sold in French bakeries and patisseries were baked from frozen
