--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h1>🕹Contact</h1>
-    <p>
+    <p class="text-1">
       Email us
       <a class="link-contact" href="mailto:oksanakostiuk89@gmail.com"
         >oksanakostiuk89@gmail.com</a
