--- a/photo.html
+++ b/photo.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo</title>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <h1>🥐A picture of croissant</h1>
     <div>
-      <img src="/croissant.jpeg" alt="Croissant" width="500" />
+      <img
+        src="/croissant.jpeg"
+        alt="Croissant"
+        width="500"
+        class="photo-croissant"
+      />
     </div>
+    <br />
     <div class="main-link">
       <a href="/">Homepage</a><a href="/photo.html">Photo</a
       ><a href="/contact.html">Contact</a>
