--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🇺🇦Oksana Kostiuk</title>
+    <meta name="description" content="The best croissant in Odesa" />
+    <title>Croissant in Odessa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <h1>🥐Croissant</h1>
     <div class="main-link">
-      <a href="/">Homepage</a><a href="/photo.html">Photo</a
-      ><a href="/contact.html">Contact</a>
+      <a href="/" alt="Main page" title="Main page">Homepage</a
+      ><a href="/photo.html" alt="Photo" title="Photo">Photo</a
+      ><a href="/contact.html" alt="Contact" title="Contact with us">Contact</a>
     </div>
     <p class="text-1">
       A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[1] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French:
