--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <meta
+      name="description"
+      content="You should not just see you should to try.Come to ous with friends"
+    />
+    <title>Croissant with cappuchino? Latte?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,16 +21,18 @@
     <h1>🥐A picture of croissant</h1>
     <div>
       <img
-        src="/croissant.jpeg"
+        src="/images/croissant.jpeg"
         alt="Croissant"
+        title="Croissant"
         width="500"
         class="photo-croissant"
       />
     </div>
     <br />
     <div class="main-link">
-      <a href="/">Homepage</a><a href="/photo.html">Photo</a
-      ><a href="/contact.html">Contact</a>
+      <a href="/" alt="Main page" title="Main page">Homepage</a
+      ><a href="/photo.html" alt="Photo" title="Photo">Photo</a
+      ><a href="/contact.html" alt="Contact" title="Contact with us">Contact</a>
     </div>
   </body>
 </html>
