--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <meta
+      name="description"
+      content="We are based in Odesa. Welcome in Ukraine"
+    />
+    <title>Contact us: croissant.com and come to us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,17 +18,22 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <h1>🕹Contact</h1>
+    <h1>🕹 Contact</h1>
     <p class="text-1">
       Email us
-      <a class="link-contact" href="mailto:oksanakostiuk89@gmail.com"
+      <a
+        class="link-contact"
+        href="mailto:oksanakostiuk89@gmail.com"
+        target="_blank"
+        alt="Email"
         >oksanakostiuk89@gmail.com</a
       >
       for more info
     </p>
     <div class="main-link">
-      <a href="/">Homepage</a><a href="/photo.html">Photo</a
-      ><a href="/contact.html">Contact</a>
+      <a href="/" alt="Main page" title="Main page">Homepage</a
+      ><a href="/photo.html" alt="Photo" title="Photo">Photo</a
+      ><a href="/contact.html" alt="Contact" title="Contact with us">Contact</a>
     </div>
   </body>
 </html>
